# snum

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: complex.rs  continued_fractions.rs  extension.rs  float.rs  fmt.rs  from.rs  lib.rs  num.rs  power.rs  quaternion.rs  rand.rs  rational.rs  roots.rs  tests.rs
