[package]
name = "snum"
version = "0.1.0"
edition = "2024"

[dependencies]
take_mut = { version = "0.2.2", default-features = false }
libm = { version = "*", default-features = false, optional = true }
bytemuck = { version = "1.9", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dependencies.num-bigint]
optional = true          # needs std until Rust 1.36
version = "*"
default-features = false

[dependencies.num-traits]
optional = true
version = "*"
default-features = false

[features]
default = ["std"]
std = []
libm = ["dep:libm"]
rational = []
bytemuck = ["dep:bytemuck"]
num-bigint = ["dep:num-bigint", "dep:num-traits"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
all-features = true
# define the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]