[package]
name = "snum"
version = "0.1.0"
edition = "2024"

[dependencies]
take_mut = { version = "0.2.2", default-features = false }
libm = { version = "*", default-features = false, optional = true }
bytemuck = { version = "1.9", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
# the following crate version is almost compatible, just that it unnecessarily depends on std.
#checked = { version = "0.4", default-features = false, optional = true }
ibig = { version = "0.3.6", default-features = false, optional = true }

[features]
default = ["std"]
std = []
libm = ["dep:libm"]
rational = []
quaternion = []
bytemuck = ["dep:bytemuck"]
ibig = ["dep:ibig"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
all-features = true
# define the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]