[package]
name = "snum"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

authors = ["redweasel"]

description = "Lightweight number types library with first class complex support."
documentation = "https://docs.rs/snum/"
repository = "https://github.com/redweasel/snum/"
categories = ["science", "mathematics", "wasm", "no-std", "random"]
license = "MIT OR Apache-2.0"
keywords = ["math", "complex", "quaternion", "rational", "random"]

[dependencies]
take_mut = { version = "0.2.2", default-features = false }
libm = { version = "*", default-features = false, optional = true }
bytemuck = { version = "1.9", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
ibig = { version = "0.3.6", default-features = false, optional = true }
rand = { version = "0.9", default-features = false, optional = true }
# the following crate version is almost compatible, just that it unnecessarily depends on std.
#checked = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
serde_yaml = { version = "*" }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

[features]
default = ["std"]
std = []
libm = ["dep:libm"]
rational = []
quaternion = []
bytemuck = ["dep:bytemuck"]
ibig = ["dep:ibig"]
rand = ["dep:rand"]
serde = ["dep:serde"]

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
all-features = true
# define the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
